--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/finnp/github-shoutouts/issues"
   },
-  "homepage": "https://github.com/finnp/github-shoutouts#readme"
+  "homepage": "https://github.com/finnp/github-shoutouts#readme",
+  "dependencies": {
+    "ndjson": "1.4.3",
+    "request": "2.70.0",
+    "through2": "2.0.1"
+  }
 }
