--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "homepage": "https://github.com/finnp/github-shoutouts#readme",
   "dependencies": {
     "after-all": "2.0.2",
-    "leveldown": "1.4.4",
-    "levelup": "1.3.1",
+    "level": "1.4.0",
     "ndjson": "1.4.3",
     "request": "2.70.0",
     "through2": "2.0.1"
